applied some fake credentials because i have no cv

--- a/public/style2/index.html
+++ b/public/style2/index.html
@@ -18,8 +18,8 @@
             <header>
                 <div>
                     <hgroup>
-                        <h1>Student Name</h1>
-                        <h2>Codes and Sleeps</h2>
+                        <h1>Mahmoud Elali</h1>
+                        <h2>Web Developer</h2>
                     </hgroup>
                     <figure>
                         <img src="../images/110x110.png" alt="Student Name" />
@@ -30,14 +30,9 @@
                 <section id="about">
                     <h3>About</h3>
                     <p>
-                        Pellentesque nec nisi at sapien sagittis sagittis.
-                        Aliquam eu condimentum mauris. Proin accumsan enim at
-                        risus hendrerit lobortis. Nunc sollicitudin sodales
-                        lectus, et rhoncus mi molestie hendrerit. Vestibulum
-                        velit lorem, rhoncus a congue ultricies, faucibus
-                        facilisis risus. Mauris turpis ante, aliquet ac
-                        venenatis at, ornare ut velit. Duis ut erat neque, eget
-                        consectetur tellus.
+                        Demonstrates strong critical thinking , decision making
+                        , problem solving ,time management , multitasking , and
+                        communication skills .
                     </p>
                 </section>
                 <section id="competencies">
@@ -70,10 +65,10 @@
                     <div class="experience">
                         <h4>
                             <span class="experience-type">
-                                Man2ouche Seller
+                                Solar panels installation assistant
                             </span>
                             <span class="experience-institution">
-                                Snack Edouard
+                                “Joussour.co”
                             </span>
                         </h4>
                         <div class="experience-details">
@@ -100,10 +95,10 @@
                     <div class="experience">
                         <h4>
                             <span class="experience-type">
-                                Man2ouche Seller
+                                Private electrical workshop
                             </span>
                             <span class="experience-institution">
-                                Snack Edouard
+                                Private contracting
                             </span>
                         </h4>
                         <div class="experience-details">
@@ -117,14 +112,12 @@
                             </span>
                         </div>
                         <p class="experience-description">
-                            Pellentesque nec nisi at sapien sagittis sagittis.
-                            Aliquam eu condimentum mauris. Proin accumsan enim
-                            at risus hendrerit lobortis. Nunc sollicitudin
-                            sodales lectus, et rhoncus mi molestie hendrerit.
-                            Vestibulum velit lorem, rhoncus a congue ultricies,
-                            faucibus facilisis risus. Mauris turpis ante,
-                            aliquet ac venenatis at, ornare ut velit. Duis ut
-                            erat neque, eget consectetur tellus.
+                            Certified with basic level of electrical worker and
+                            maintenance . Lorem ipsum dolor sit amet
+                            consectetur, adipisicing elit. Rem vero molestias
+                            ducimus animi, alias quisquam eos pariatur? Rem
+                            nulla ex, voluptas distinctio sint consequatur
+                            numquam veniam, minus eveniet, beatae fugit.
                         </p>
                     </div>
                 </section>
@@ -133,18 +126,21 @@
                     <div class="experience">
                         <h4>
                             <span class="experience-type">
-                                Web Stack Training
+                                TS1 in Computer Network and System
+                                Administration
                             </span>
-                            <span class="experience-institution">Codi</span>
+                            <span class="experience-institution">
+                                AL Quobbeh institute
+                            </span>
                         </h4>
                         <div class="experience-details">
-                            <span class="experience-location">Beirut</span>
+                            <span class="experience-location">Tripoli</span>
                             <span class="experience-date">
                                 <span class="day">30</span>
                                 <span class="experience-date-separator">/</span>
                                 <span class="month">12</span>
                                 <span class="experience-date-separator">/</span>
-                                <span class="year">1995</span>
+                                <span class="year">2021</span>
                             </span>
                         </div>
                         <p class="experience-description">
